--- a/src/components/navbar/Navbar.astro
+++ b/src/components/navbar/Navbar.astro
@@ -4,7 +4,7 @@ import BrandLogo from "../logo-site/Brand-logo.astro";
 ---
 
 <header class="navbar">
-  <a class="navbar__logo-site" href="/">
+  <a class="navbar__logo-site" href="#welcome">
     <BrandLogo modifier="navbar" />
     <BrandName modifier="navbar" />
   </a>
@@ -24,7 +24,7 @@ import BrandLogo from "../logo-site/Brand-logo.astro";
 
     <ul class="menu__links">
       <li><a class="menu__links-item" href="#servicios">servicios</a></li>
-      <li><a class="menu__links-item" href="#nosotros">nosotros</a></li>
+      <li><a class="menu__links-item" href="#about">nosotros</a></li>
       <li><a class="menu__links-item" href="#testimonios">trabajos</a></li>
       <li><a class="menu__links-item" href="#faqs">faqs</a></li>
     </ul>
