--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -25,7 +25,7 @@ const { modifier, align, isFullScreen, ...res } = Astro.props;
 
   section.fullScreen {
     min-width: 100%;
-    min-height: 100vh;
+    min-height: 100dvh;
   }
 
   [data-align="left"] {
@@ -45,7 +45,7 @@ const { modifier, align, isFullScreen, ...res } = Astro.props;
 
   .about {
     width: 95%;
-    height: 100vh;
+    height: 100dvh;
     margin: 0 auto;
     gap: 2rem;
   }
