--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,11 +3,13 @@
 import Layout from "../layouts/Layout.astro";
 import Welcome from "../sections/Welcome.astro";
 import Services from "../sections/Services.astro";
-import About from "../sections/About.astro";
+import About from "../sections/about/About.astro";
 import Testimonial from "../sections/testimonial/Testimonial.astro";
 import Faqs from "../sections/Faqs.astro";
 import Parallax from "../sections/Parallax.astro";
 import Cta from "../sections/Cta.astro";
+
+import Spline from "../sections/Spline.astro";
 ---
 
 <Layout title="Consultorio dental Acosta">
