--- a/src/sections/Cta.astro
+++ b/src/sections/Cta.astro
@@ -35,8 +35,11 @@ import WhatsIcon from "../components/icons/social/WhatsIcon.astro";
 <style>
   .container {
     width: 100%;
-    height: 100vh;
-    background: url(/assets/pattern.png) center/70% no-repeat fixed;
+    height: 100dvh;
+    background-image: url(/assets/pattern.svg);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
     display: flex;
     flex-direction: column;
     justify-content: center;
