--- a/src/sections/Faqs.astro
+++ b/src/sections/Faqs.astro
@@ -50,18 +50,23 @@ import Tooth2 from "../components/icons/Tooth2.astro";
     <li>
       <details>
         <summary
-          >¿Qué debo esperar en mi primer visita?
+          >¿Donde esta ubicado el consultorio?
           <picture class="icon"><Arrow2 /></picture>
         </summary>
         <div class="answer">
           <div slot="icon" class="tooth">
             <Tooth2 />
           </div>
-          <Text size="sm">
-            En tu primera visita, te recibirán con una cálida bienvenida. El
-            dentista realizará un examen oral completo y discutirá cualquier
-            inquietud o tratamiento necesario.
-          </Text>
+          <div class="map">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14899.047696913403!2d-89.66129581284176!3d21.002178399999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f5674492b52e4cd%3A0xa648bd67fc496c06!2sDental%20Montejo!5e0!3m2!1ses-419!2smx!4v1705259331637!5m2!1ses-419!2smx"
+              width="400"
+              height="300"
+              style="border:0;"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
         </div>
       </details>
     </li>
@@ -86,12 +91,13 @@ import Tooth2 from "../components/icons/Tooth2.astro";
     z-index: 3;
   }
   .accordion {
+    margin-top: 3rem;
     width: min(80rem, 90%);
     margin: 0 auto calc(var(--nav-height) * 1.5) auto;
     color: var(--color-new-2);
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 4rem;
   }
 
   details {
@@ -138,5 +144,9 @@ import Tooth2 from "../components/icons/Tooth2.astro";
   .tooth {
     flex: 0 0 3vw;
     height: 2rem;
+  }
+  .map {
+    width: 100%;
+    height: 100%;
   }
 </style>
