--- a/src/sections/Parallax.astro
+++ b/src/sections/Parallax.astro
@@ -1,7 +1,3 @@
----
-
----
-
 <section>
   <picture>
     <img src="/assets/girl-smile.jpg" alt="mujer joven sonriendo" />
@@ -11,7 +7,7 @@
 <style>
   section {
     position: relative;
-    height: 100vh;
+    height: 100dvh;
     overflow: hidden;
     border-radius: 2rem;
   }
