--- a/src/styles/headings.css
+++ b/src/styles/headings.css
@@ -2,6 +2,7 @@
   font-family: var(--font-primary);
   text-transform: capitalize;
   color: currentColor;
+  text-wrap: balance;
 }
 
 /* modifiers */
