Esto es otro cambio prueba

--- a/src/sections/Parallax.astro
+++ b/src/sections/Parallax.astro
@@ -10,6 +10,7 @@
     height: 100dvh;
     overflow: hidden;
     border-radius: 2rem;
+    background-color: blue;
   }
   picture {
     width: 100%;
