--- a/src/sections/Services.astro
+++ b/src/sections/Services.astro
@@ -79,11 +79,11 @@ import ProfilaxisIcon from "../components/icons/services/ProfilaxisIcon.astro";
     top: calc(var(--nav-height) + 10rem);
     display: flex;
     flex-direction: column;
-    flex: 0 1 min(50rem, 90%);
+    flex: 2 1 min(50rem, 90%);
   }
   header p {
     width: 85%;
-    margin-left: 15%;
+    margin-left: min(25px, 15%);
   }
   .cards-container {
     flex: 0 1 40rem;
@@ -93,6 +93,10 @@ import ProfilaxisIcon from "../components/icons/services/ProfilaxisIcon.astro";
     position: relative;
     transform: translateY(5vh);
   }
+  .sticker--services {
+    margin-right: max(50px, 20%);
+  }
+  /* responsive */
   @media screen and (max-width: 963px) {
     section {
       justify-content: center;
@@ -102,6 +106,7 @@ import ProfilaxisIcon from "../components/icons/services/ProfilaxisIcon.astro";
       position: relative;
       width: 100%;
       top: 0;
+      gap: 10px;
     }
   }
 </style>
