sections testimonials & faqs removed for works & chatbot

--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -49,4 +49,16 @@ const { modifier, align, isFullScreen, ...res } = Astro.props;
     margin: 0 auto;
     gap: 2rem;
   }
+
+  .works {
+    flex-direction: column;
+    gap: 3.5rem;
+    justify-content: center;
+  }
+  .chatbot {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 </style>
