--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,8 @@ import Layout from "../layouts/Layout.astro";
 import Welcome from "../sections/Welcome.astro";
 import Services from "../sections/Services.astro";
 import About from "../sections/about/About.astro";
-import Testimonial from "../sections/testimonial/Testimonial.astro";
+import Works from "../sections/works/Works.astro";
+import Chatbot from "../sections/chatbot/Chatbot.astro";
 import Faqs from "../sections/Faqs.astro";
 import Parallax from "../sections/Parallax.astro";
 import Cta from "../sections/Cta.astro";
@@ -14,8 +15,8 @@ import Cta from "../sections/Cta.astro";
   <Welcome />
   <Services />
   <About />
-  <Testimonial />
-  <Faqs />
+  <Works />
+  <Chatbot />
   <Parallax />
   <Cta />
 </Layout>
