--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,6 +20,7 @@
   color: var(--accent);
 }
 
+/* stickers styles */
 .sticker {
   width: clamp(8rem, 10vw, 10rem);
   height: clamp(8rem, 10vw, 10rem);
@@ -27,6 +28,9 @@
 }
 .sticker--work {
   margin: 0 0 0 auto;
+  position: absolute;
+  top: -3rem;
+  right: 20%;
 }
 .sticker--about {
   position: absolute;
