chatbot changed for floating

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -53,5 +53,11 @@ const { title } = Astro.props;
     <main>
       <slot />
     </main>
+    <script src="https://cdn.botpress.cloud/webchat/v1/inject.js" is:inline
+    ></script>
+    <script
+      src="https://mediafiles.botpress.cloud/ba57d301-1b37-4aa2-b0bc-4cffc632a9b1/webchat/config.js"
+      defer
+      is:inline></script>
   </body>
 </html>
