--- a/src/sections/chatbot/Chatbot.astro
+++ b/src/sections/chatbot/Chatbot.astro
@@ -1,106 +1,50 @@
 ---
 import Section from "../../components/Section.astro";
 import Text from "../../components/Text.astro";
-import Loader from "../../components/Loader.astro";
 ---
 
 <Section isFullScreen modifier="chatbot">
-  <script src="https://cdn.botpress.cloud/webchat/v0/inject.js"></script>
-  <div class="chatbot-container">
-    <header>
-      <h2 class="title title--sm">chat de soporte</h2>
-      <span class="title title--md">resuelve tus dudas</span>
-      <Text size="md">realiza cualquier pregunta sobre el consultorio</Text>
-    </header>
-    <div class="chatbot-wrap">
-      <Loader />
-      <iframe
-        style="border: none;"
-        srcdoc="<body><script src='https://cdn.botpress.cloud/webchat/v0/inject.js'></script>
-          <script>
-            window.botpressWebChat.init({
-                'composerPlaceholder': 'escribe tu duda aqui...',
-                'botConversationDescription': 'asistente inteligente',
-                'botName': 'AIDA',
-                'botId': 'ba57d301-1b37-4aa2-b0bc-4cffc632a9b1',
-                'hostUrl': 'https://cdn.botpress.cloud/webchat/v0',
-                'messagingUrl': 'https://messaging.botpress.cloud',
-                'clientId': 'ba57d301-1b37-4aa2-b0bc-4cffc632a9b1',
-                'enableConversationDeletion': true,
-                'showPoweredBy': false,
-                'className': 'webchatIframe',
-                'containerWidth': '100%25',
-                'layoutWidth': '100%25',
-                'hideWidget': true,
-                'showCloseButton': false,
-                'disableAnimations': true,
-                'closeOnEscape': false,
-                'showConversationsButton': false,
-                'avatarUrl': 'https://cdn.leonardo.ai/users/8d505aa4-7c21-4377-af0e-3413989efa12/generations/558a3330-01ef-4d02-90a0-02af2cbbc5f2/Default_asistente_mujer_para_consultorio_dental_0.jpg',
-                'enableTranscriptDownload': false,
-                'stylesheet':'https://webchat-styler-css.botpress.app/prod/a39a6f86-ddd0-4c5a-900c-3973d19c288e/v18063/style.css'
-                
-            });
-          window.botpressWebChat.onEvent(function () { window.botpressWebChat.sendEvent({ type: 'show' }) }, ['LIFECYCLE.LOADED']);
-          </script></body>"
-        width="100%"
-        height="100%"></iframe>
+  <header>
+    <h2 class="title title--sm">chat de soporte</h2>
+    <span class="title title--md">resuelve tus dudas</span>
+    <Text size="md">haz click en la burbuja flotante</Text>
+    <div class="icon">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 24 24"
+        stroke="#08177e"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"><path d="M7 7l9.2 9.2M17 7v10H7"></path></svg
+      >
     </div>
-  </div>
-
-  <div class="rectangle">hola</div>
+  </header>
 </Section>
 
 <style>
   header {
     color: var(--white);
     flex: 1 1 min(35rem, 60%);
-    text-align: right;
-  }
-
-  .chatbot-container {
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    gap: 3rem;
-    width: 85%;
-    z-index: 2;
-  }
-
-  .chatbot-wrap {
-    position: relative;
-    height: min(55rem, 60vh);
-    flex: 0 1 min(45rem, 90%);
-    background-color: var(--accent);
-    border-radius: 1.5rem;
-    margin: 0 auto;
-    overflow: hidden;
-    border: 0.8em solid var(--light);
-    outline: 0.5em solid var(--accent);
-  }
-
-  .rectangle {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    text-align: left;
     background-color: var(--dark);
-    width: 90vw;
-    height: 45vh;
-    border-radius: 1.5rem;
-    z-index: 1;
-  }
-  .chatbot-wrap iframe {
+    flex: 0 0 85%;
+    padding: 2rem 4rem;
+    height: 40vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 1.2rem;
     position: relative;
-    height: 100% !important;
-    z-index: 2;
   }
 
-  @media screen and (max-width: 976px) {
-    header {
-      color: var(--dark);
-    }
+  .icon {
+    width: 5rem;
+    height: 5rem;
+    position: absolute;
+    bottom: 1rem;
+    right: 1.5rem;
+  }
+  .icon svg {
+    fill: none;
   }
 </style>
